Issue #1893644: Alignment slightly off on validation errors

--- a/css/edit.css
+++ b/css/edit.css
@@ -234,6 +234,10 @@
   max-width: 35em;
 }
 
+.edit-form div.messages {
+  margin: 0 0 8px 0;
+}
+
 .edit-form .placeholder {
   min-height: 22px;
 }
